  https://sourceforge.net/p/omegat/feature-requests/1707/

  - Team: SVN: Replacing trilead-ssh2 with Apache sshd
  https://sourceforge.net/p/omegat/feature-requests/1699/

  - Better error message for omegat.project failure
  https://sourceforge.net/p/omegat/feature-requests/1696/

  - Generate JSON format stastics file when save
  https://sourceforge.net/p/omegat/feature-requests/1695/

  - Build System: update gradle verison to 7.5.1
  https://sourceforge.net/p/omegat/feature-requests/1691/

  - Update LanguageTool to latest version (6.1)
  https://sourceforge.net/p/omegat/feature-requests/1637/

  - Team feature: SSH support id_ecdsa and id_ed25519 for default key
  https://sourceforge.net/p/omegat/feature-requests/1598/

  - Use Jackson library as XML parser
  https://sourceforge.net/p/omegat/feature-requests/1582/

  - Add nashorn javascript engine[Java 17 compatibility]
  https://sourceforge.net/p/omegat/feature-requests/1525/

  - Use repository mappings in a local project
  https://sourceforge.net/p/omegat/feature-requests/1448/

  - Remove "Restore defaults" button where it has no function
  https://sourceforge.net/p/omegat/feature-requests/1364/

  - Upgrade to LanguageTool 3.6
  https://sourceforge.net/p/omegat/feature-requests/1299/

  - Improve TBX parsing
  https://sourceforge.net/p/omegat/feature-requests/1268/

  - Support SRX format


  - If multiple versions of the same plugin are present, only the latest is loaded
  https://sourceforge.net/p/omegat/feature-requests/1519/

  Bug fixes:

  - Google2 Translate MT connector failed to parse response
  https://sourceforge.net/p/omegat/bugs/1206/

  - Integration test(docker) failure with 503
  https://sourceforge.net/p/omegat/bugs/1199/

  - Content of notes elements are not displayed correctly with Xliff filter
  https://sourceforge.net/p/omegat/bugs/1192/

  - ProjectFile has unwanted XML element otherAttributes
  https://sourceforge.net/p/omegat/bugs/1191/
