@@ -26,6 +26,9 @@
   - Generate JSON format stastics file when save
   https://sourceforge.net/p/omegat/feature-requests/1695/
 
+  - Generate and compile TXT and JSON file when committing target files
+  https://sourceforge.net/p/omegat/feature-requests/1690/
+
   - Build System: update gradle verison to 7.5.1
   https://sourceforge.net/p/omegat/feature-requests/1691/
 
